syntax = "proto3";

package com.distkv.rpc.protobuf;

option java_package="com.distkv.rpc.protobuf.generated";
option java_outer_classname = "IntProtocol";
option cc_generic_services = true;

message IntPutRequest {
    int32 value = 1;
};

message IntPutResponse {
};

message IntGetRequest {
}

message IntGetResponse {
    int32 value = 1;
};

message IntIncrRequest {
    int32 delta = 1;
}

message IntIncrResponse {
}
